--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <link rel="stylesheet" href="./css/style.css">
         <link rel="preconnect" href="https://fonts.googleapiscom">
         <title>Servicios Virtuales</title>
+        <link rel="icon" type="img/css" href="/Img/robot-logo.jpg">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
